# chess-engine

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: allocation_benchmark.cpp  attacks_benchmark.cpp  nnue_benchmark.cpp  openings_smoke.epd  perft_benchmark.cpp  scaling_benchmark.cpp  search_benchmark.cpp
include/: attacks.h  bitboard.h  board.h  evaluate.h  move.h  movegen.h  nnue.h  search.h  see.h  transposition_table.h  types.h  uci.h  zobrist.h
lichess/: .env.example  config.yml
lichess/launchd/: org.leonmamic.chess-engine-lichess-bot.plist.template
lichess/systemd/: chess-engine-lichess-bot.service.template
scripts/: build_baseline.sh  build_m4_pgo.sh  build_stockfish_binpack_tool.sh  check_lichess_bot.sh  compare_search_benchmarks.sh  export_latest_nnue.sh  make_stockfish_binpack_from_lichess.sh  run_lichess_bot.sh  run_match.sh  run_search_sprt.sh  run_singular_sprt.sh  run_stability.sh  setup_cutechess.sh  setup_lichess_bot.sh  train_stockfish_nnue.sh
src/: attacks.cpp  board.cpp  check_setup.py  config.json  evaluate.cpp  main.cpp  main.py  model.py  movegen.cpp  nnue.cpp  play.sh  play_vs_model.py  search.cpp  see.cpp  start.sh  test_model.py  train.py  transposition_table.cpp  types.cpp  uci.cpp  view_progress.py
tests/: attacks_tests.cpp  perft_tests.cpp
tools/: magic_generator.cpp  stockfish_binpack_tool.cpp
tools/stockfish_data/: lichess_eval_to_stockfish_plain.py
